--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -1,31 +1,26 @@
 name: Sync with Project Board
+
 on:
-  # Triggers
   issues:
-    types: [opened, edited, labeled, assigned]
+    types: [opened]
   pull_request:
-    types: [opened, closed, reopened, labeled]
+    types: [opened, closed]
 
 jobs:
   sync-to-project:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-      - name: Add issues to project
+      - name: Add to project
         if: github.event_name == 'issues'
         uses: actions/add-to-project@v0.4.0
         with:
-          project-url: "https://github.com/alagaddonjuan/deptportal" # Replace with your project URL
+          project-url: "https://github.com/alagaddonjuan/deptportal/projects/1" # Update project number
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          labeled: ""
           
       - name: Sync PR status
         if: github.event_name == 'pull_request'
-        uses: srggrs/auto-sync-project@v1.0.1
+        uses: actions/add-to-project@v0.4.0
         with:
-          project-url: "https://github.com/alagaddonjuan/deptportal"
+          project-url: "https://github.com/alagaddonjuan/deptportal/projects/1"
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          column-name: "In Review" # Moves PRs here when opened
-          done-column: "Done" # Moves here when PR is merged
+          column-name: "In Review" # Optional
