Fix project URL in workflow file

--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -1,6 +1,5 @@
 name: Sync with Project Board
 on:
-  # Triggers
   issues:
     types: [opened, edited, labeled, assigned]
   pull_request:
@@ -17,15 +16,15 @@ jobs:
         if: github.event_name == 'issues'
         uses: actions/add-to-project@v0.4.0
         with:
-          project-url: "https://github.com/alagaddonjuan/deptportal" # Replace with your project URL
+          project-url: "https://github.com/users/alagaddonjuan/projects/1" # Corrected URL format
           github-token: ${{ secrets.GITHUB_TOKEN }}
           labeled: ""
-          
+
       - name: Sync PR status
         if: github.event_name == 'pull_request'
         uses: srggrs/auto-sync-project@v1.0.1
         with:
-          project-url: "https://github.com/alagaddonjuan/deptportal"
+          project-url: "https://github.com/users/alagaddonjuan/projects/1" # Corrected URL format
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          column-name: "In Review" # Moves PRs here when opened
-          done-column: "Done" # Moves here when PR is merged
+          column-name: "In Review"
+          done-column: "Done"
